@startuml

title __SHARE's Class Diagram__\n

  namespace com.fahadali.intranet {
    namespace fragments.ui.share {
      class com.fahadali.intranet.fragments.ui.share.ShareFragment {
          + onCreateView()
      }
    }
  }
  

  namespace com.fahadali.intranet {
    namespace fragments.ui.share {
      class com.fahadali.intranet.fragments.ui.share.ShareViewModel {
          - mText : MutableLiveData<String>
          + ShareViewModel()
          + getText()
      }
    }
  }
  

  com.fahadali.intranet.fragments.ui.share.ShareFragment -up-|> androidx.fragment.app.Fragment
  com.fahadali.intranet.fragments.ui.share.ShareFragment o-- com.fahadali.intranet.fragments.ui.share.ShareViewModel : shareViewModel
  com.fahadali.intranet.fragments.ui.share.ShareViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
